# auth2

./: Cargo.toml  install.sh
authd/: Cargo.toml  README.md  example.toml
authd/src/: config.rs  lib.rs  main.rs  rpc.rs  socketname.rs  types.rs
libcosiauthd/: Cargo.toml
libcosiauthd/src/: lib.rs  socketname.rs  types.rs
nss_cosiauthd/: Cargo.toml
nss_cosiauthd/src/: client.rs  group.rs  lib.rs  passwd.rs
proxy/: Cargo.toml
proxy/src/: main.rs  rpc.rs
