[package]
name = "authd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

anyhow = "1.0"
futures = "0.3"
tarpc = { version = "0.30", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }

# Using forked repo until we can make a PR
libnss = { git = "https://github.com/COSI-Lab/libnss-rs.git", branch = "debug", features = ["serde"] }

itertools = "0.10"
tracing = "0.1"

rustls = "0.20"
tokio-rustls = "0.23"
shellexpand = "2.1"
stubborn-io = "0.3"
