[package]
name = "libcosiauthd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tarpc = { version = "0.31" }

# Using forked repo until we can make a PR
libnss = { git = "https://github.com/COSI-Lab/libnss-rs.git", branch = "debug", features = ["serde"] }

