[package]
name = "nss_cosiauthd"
version = "0.1.0"
edition = "2021"

[lib]
name = "nss_cosiauthd"
crate-type = [ "cdylib" ]

[dependencies]
libc = "0.2"
lazy_static = "1.3"
paste = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
anyhow = "1.0"
futures = "0.3"
tarpc = { version = "0.30", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
authd = { path = "../authd" }
trust-dns-resolver = "0.22.0"
rustls = "0.20.7"

# Using forked repo until we can make a PR
libnss = { git = "https://github.com/COSI-Lab/libnss-rs.git", branch = "debug", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
