[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
libcosiauthd = { path = "../libcosiauthd" }
rustls = "0.20"
tokio-rustls = "0.23"
tokio = { version = "1.0", features = ["full"] }
tarpc = { version = "0.31", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
stubborn-io = "0.3"
futures-util = "0.3.25"
